<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/previous"
        tools:ignore="MissingConstraints"
        android:background="@null"/>

    <TextView
        android:id="@+id/textTimeZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/time_zone"
        android:textColor="@android:color/black"
        android:textSize="24sp" />


    <ListView
        android:id="@+id/listZone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTimeZone" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/clock_color"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/push_button1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/roundbutton"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/push_button2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/roundbutton"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/push_button3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/roundbutton"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/push_button4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/roundbutton"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="173dp"
        android:layout_height="41dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/hour_clock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>